{
    "name": "New Controls",
    "maps": [
        {
            "name": "DefaultMap",
            "id": "e8b17dd7-a974-4b25-9755-6f35366d01a0",
            "actions": [
                {
                    "name": "MovementX",
                    "type": "Value",
                    "id": "0ffdfda4-e468-442d-8d51-8934fe0cb97b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementY",
                    "type": "Value",
                    "id": "83689081-88c8-482f-af7e-048e29eff0f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Axes",
                    "id": "b3ec7708-b1cd-44de-a837-583dd6099473",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "f23a2cd1-8d1b-49b4-8418-fd1e52ffdab8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "cc2a2ff0-8672-4d51-9140-c6193c80aa18",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Y",
                    "id": "5431143a-e541-4cda-881a-6bb29a21c22a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "244633c3-18e5-4e9b-87b0-12c13b3c0311",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b4580467-5caf-4228-8d09-d40e49ed73a6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementY",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}